--- a/src/css/themes/emacs-sanityinc-tomorrow-day.scss
+++ b/src/css/themes/emacs-sanityinc-tomorrow-day.scss
@@ -1,52 +1,57 @@
 .Ymacs-Theme-sanityinc-tomorrow-day { --ymacs-cursor-bg: #c82829; --ymacs-cursor-fg: #ffffff; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame { color: #4d4d4c; background-color: #ffffff; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .Ymacs_Overlay.selection div { background-color: #d6d6d6; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .Ymacs_Overlay.isearch div { color: #ffffff; background-color: #eab700; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .Ymacs_Overlay.isearch-lazy div { color: #ffffff; background-color: #3e999f; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .Ymacs_Overlay.match-paren div { color: #000000; background-color: #32cd32; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .Ymacs_Modeline { color: #8e908c; background-color: #efefef; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame-active .Ymacs_Modeline { color: #4d4d4c; background-color: #d6d6d6; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .type { color: #4271ae; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .builtin { color: #8959a8; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .function-name { color: #f5871f; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .variable-name { color: #eab700; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .constant { color: #4271ae; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .string { color: #3e999f; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .string-starter { color: #3e999f; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .string-stopper { color: #3e999f; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .regexp { color: #3e999f; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .regexp-starter { color: #3e999f; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .regexp-stopper { color: #3e999f; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .regexp-modifier { color: #3e999f; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .keyword { color: #718c00; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .comment { color: #8e908c; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .mcomment { color: #8e908c; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .comment-starter { color: #8e908c; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .mcomment-starter { color: #8e908c; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .mcomment-stopper { color: #8e908c; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .number { color: #4271ae; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .operator { }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .error { color: #c82829; font-weight: bold; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .xml-open-tag { color: #f5871f; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .xml-close-tag { color: #f5871f; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .xml-attribute { color: #eab700; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .xml-entity-starter { color: #4271ae; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .xml-entity-stopper { color: #4271ae; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .xml-entity { color: #4271ae; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .xml-open-bracket { }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .xml-close-bracket { }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .xml-closetag-slash { }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .xml-cdata { color: #8e908c; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .xml-cdata-starter { color: #8e908c; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .xml-cdata-stopper { color: #8e908c; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .lisp-keyword { color: #8959a8; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .markdown-heading1 { font-weight: bold; font-size: 1.383em; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .markdown-heading2 { font-weight: bold; font-size: 1.192em; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .markdown-heading3 { color: #f5871f; font-weight: bold; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .markdown-heading4 { color: #8959a8; font-weight: bold; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .markdown-heading5 { font-weight: bold; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .markdown-heading6 { font-weight: bold; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .markdown-blockquote { color: #8e908c; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .markdown-blockquote1 { color: #8e908c; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .markdown-blockquote2 { color: #8e908c; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame .markdown-blockquote3 { color: #8e908c; }
+.Ymacs-Theme-sanityinc-tomorrow-day { color: #4d4d4c; background-color: #ffffff; }
+.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_SplitCont .bar { background-color: #969896; }
+.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_SplitCont.horiz .bar { border-top: 1px solid #d6d6d6; border-bottom: 1px solid #d6d6d6; }
+.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_SplitCont.vert .bar { border-left: 1px solid #d6d6d6; border-right: 1px solid #d6d6d6; }
+.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Overlay.selection div { background-color: #d6d6d6; }
+.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Overlay.isearch div { color: #ffffff; background-color: #eab700; }
+.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Overlay.isearch-lazy div { color: #ffffff; background-color: #3e999f; }
+.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Overlay.match-paren div { color: #000000; background-color: #32cd32; }
+.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Modeline { color: #8e908c; background-color: #efefef; border: 1px solid #d6d6d6; }
+.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame-active .Ymacs_Modeline { color: #4d4d4c; background-color: #d6d6d6; border: 1px solid #d6d6d6; }
+.Ymacs-Theme-sanityinc-tomorrow-day .minibuffer-prompt { color: #4271ae; }
+.Ymacs-Theme-sanityinc-tomorrow-day .mode-line-buffer-id { color: #8959a8; }
+.Ymacs-Theme-sanityinc-tomorrow-day .type { color: #4271ae; }
+.Ymacs-Theme-sanityinc-tomorrow-day .builtin { color: #8959a8; }
+.Ymacs-Theme-sanityinc-tomorrow-day .function-name { color: #f5871f; }
+.Ymacs-Theme-sanityinc-tomorrow-day .variable-name { color: #eab700; }
+.Ymacs-Theme-sanityinc-tomorrow-day .constant { color: #4271ae; }
+.Ymacs-Theme-sanityinc-tomorrow-day .string { color: #3e999f; }
+.Ymacs-Theme-sanityinc-tomorrow-day .string-starter { color: #3e999f; }
+.Ymacs-Theme-sanityinc-tomorrow-day .string-stopper { color: #3e999f; }
+.Ymacs-Theme-sanityinc-tomorrow-day .regexp { color: #3e999f; }
+.Ymacs-Theme-sanityinc-tomorrow-day .regexp-starter { color: #3e999f; }
+.Ymacs-Theme-sanityinc-tomorrow-day .regexp-stopper { color: #3e999f; }
+.Ymacs-Theme-sanityinc-tomorrow-day .regexp-modifier { color: #3e999f; }
+.Ymacs-Theme-sanityinc-tomorrow-day .keyword { color: #718c00; }
+.Ymacs-Theme-sanityinc-tomorrow-day .comment { color: #8e908c; }
+.Ymacs-Theme-sanityinc-tomorrow-day .mcomment { color: #8e908c; }
+.Ymacs-Theme-sanityinc-tomorrow-day .comment-starter { color: #8e908c; }
+.Ymacs-Theme-sanityinc-tomorrow-day .mcomment-starter { color: #8e908c; }
+.Ymacs-Theme-sanityinc-tomorrow-day .mcomment-stopper { color: #8e908c; }
+.Ymacs-Theme-sanityinc-tomorrow-day .number { color: #4271ae; }
+.Ymacs-Theme-sanityinc-tomorrow-day .operator { }
+.Ymacs-Theme-sanityinc-tomorrow-day .error { color: #c82829; font-weight: bold; }
+.Ymacs-Theme-sanityinc-tomorrow-day .xml-open-tag { color: #f5871f; }
+.Ymacs-Theme-sanityinc-tomorrow-day .xml-close-tag { color: #f5871f; }
+.Ymacs-Theme-sanityinc-tomorrow-day .xml-attribute { color: #eab700; }
+.Ymacs-Theme-sanityinc-tomorrow-day .xml-entity-starter { color: #4271ae; }
+.Ymacs-Theme-sanityinc-tomorrow-day .xml-entity-stopper { color: #4271ae; }
+.Ymacs-Theme-sanityinc-tomorrow-day .xml-entity { color: #4271ae; }
+.Ymacs-Theme-sanityinc-tomorrow-day .xml-open-bracket { }
+.Ymacs-Theme-sanityinc-tomorrow-day .xml-close-bracket { }
+.Ymacs-Theme-sanityinc-tomorrow-day .xml-closetag-slash { }
+.Ymacs-Theme-sanityinc-tomorrow-day .xml-cdata { color: #8e908c; }
+.Ymacs-Theme-sanityinc-tomorrow-day .xml-cdata-starter { color: #8e908c; }
+.Ymacs-Theme-sanityinc-tomorrow-day .xml-cdata-stopper { color: #8e908c; }
+.Ymacs-Theme-sanityinc-tomorrow-day .lisp-keyword { color: #8959a8; }
+.Ymacs-Theme-sanityinc-tomorrow-day .markdown-heading1 { font-weight: bold; font-size: 1.383em; }
+.Ymacs-Theme-sanityinc-tomorrow-day .markdown-heading2 { font-weight: bold; font-size: 1.192em; }
+.Ymacs-Theme-sanityinc-tomorrow-day .markdown-heading3 { color: #f5871f; font-weight: bold; }
+.Ymacs-Theme-sanityinc-tomorrow-day .markdown-heading4 { color: #8959a8; font-weight: bold; }
+.Ymacs-Theme-sanityinc-tomorrow-day .markdown-heading5 { font-weight: bold; }
+.Ymacs-Theme-sanityinc-tomorrow-day .markdown-heading6 { font-weight: bold; }
+.Ymacs-Theme-sanityinc-tomorrow-day .markdown-blockquote { color: #8e908c; }
+.Ymacs-Theme-sanityinc-tomorrow-day .markdown-blockquote1 { color: #8e908c; }
+.Ymacs-Theme-sanityinc-tomorrow-day .markdown-blockquote2 { color: #8e908c; }
+.Ymacs-Theme-sanityinc-tomorrow-day .markdown-blockquote3 { color: #8e908c; }
