--- a/src/css/ymacs-syntax-dark.scss
+++ b/src/css/ymacs-syntax-dark.scss
@@ -1,61 +1,61 @@
 /* general stuff */
 
-.Ymacs-Theme-dark .Ymacs_Frame { color: wheat; background-color: #262626; }
+.Ymacs-Theme-dark { color: wheat; background-color: #262626; }
 
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .type { color: #87ceeb; font-weight: bold; }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .builtin   { color: rgb(176, 196, 222); }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .function-name   { color: rgb(135, 206, 250);  font-weight: bold; }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .variable-name   { color: rgb(238, 221, 130);  font-weight: bold; }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .constant   { color: rgb(127, 255, 212); font-style: normal;  }
+.Ymacs-Theme-dark.Ymacs-Theme-y .type { color: #87ceeb; font-weight: bold; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .builtin   { color: rgb(176, 196, 222); }
+.Ymacs-Theme-dark.Ymacs-Theme-y .function-name   { color: rgb(135, 206, 250);  font-weight: bold; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .variable-name   { color: rgb(238, 221, 130);  font-weight: bold; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .constant   { color: rgb(127, 255, 212); font-style: normal;  }
 
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .string { color: rgb(250, 200, 80); font-style: normal;  }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .string-starter,
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .string-stopper { color: #c59500; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .string { color: rgb(250, 200, 80); font-style: normal;  }
+.Ymacs-Theme-dark.Ymacs-Theme-y .string-starter,
+.Ymacs-Theme-dark.Ymacs-Theme-y .string-stopper { color: #c59500; }
 
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .regexp { color: #d9f; font-style: normal;  }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .regexp-starter,
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .regexp-stopper,
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .regexp-modifier { color: #e4f; font-weight: bold; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .regexp { color: #d9f; font-style: normal;  }
+.Ymacs-Theme-dark.Ymacs-Theme-y .regexp-starter,
+.Ymacs-Theme-dark.Ymacs-Theme-y .regexp-stopper,
+.Ymacs-Theme-dark.Ymacs-Theme-y .regexp-modifier { color: #e4f; font-weight: bold; }
 
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .keyword   { color: rgb(0, 255, 255);  font-weight: bold; }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .comment,
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .mcomment { color: #45cc00; font-style: normal; }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .comment-starter,
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .mcomment-starter,
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .mcomment-stopper { color: #999; }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .number { color: yellow; }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .operator { color: #fff; }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .error { color: #ff0; background-color: #a00; font-weight: bold; }
-/* .Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .trailing-whitespace { text-decoration: underline; color: #777; } */
+.Ymacs-Theme-dark.Ymacs-Theme-y .keyword   { color: rgb(0, 255, 255);  font-weight: bold; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .comment,
+.Ymacs-Theme-dark.Ymacs-Theme-y .mcomment { color: #45cc00; font-style: normal; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .comment-starter,
+.Ymacs-Theme-dark.Ymacs-Theme-y .mcomment-starter,
+.Ymacs-Theme-dark.Ymacs-Theme-y .mcomment-stopper { color: #999; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .number { color: yellow; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .operator { color: #fff; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .error { color: #ff0; background-color: #a00; font-weight: bold; }
+/* .Ymacs-Theme-dark.Ymacs-Theme-y .trailing-whitespace { text-decoration: underline; color: #777; } */
 
 /* XML mode */
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .xml-open-tag,
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .xml-close-tag { color: rgb(0, 255, 255); font-weight: bold; }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .xml-attribute { color: rgb(106, 176, 222); }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .xml-entity-starter,
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .xml-entity-stopper { color: #f4c; }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .xml-entity { color: #e4f; font-style: normal;  }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .xml-closetag-slash { color: #f51; }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .xml-open-bracket,
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .xml-close-bracket { color: #a56500; }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .xml-cdata { color: #bbb; }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .xml-cdata-starter,
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .xml-cdata-stopper { color: #888; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .xml-open-tag,
+.Ymacs-Theme-dark.Ymacs-Theme-y .xml-close-tag { color: rgb(0, 255, 255); font-weight: bold; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .xml-attribute { color: rgb(106, 176, 222); }
+.Ymacs-Theme-dark.Ymacs-Theme-y .xml-entity-starter,
+.Ymacs-Theme-dark.Ymacs-Theme-y .xml-entity-stopper { color: #f4c; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .xml-entity { color: #e4f; font-style: normal;  }
+.Ymacs-Theme-dark.Ymacs-Theme-y .xml-closetag-slash { color: #f51; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .xml-open-bracket,
+.Ymacs-Theme-dark.Ymacs-Theme-y .xml-close-bracket { color: #a56500; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .xml-cdata { color: #bbb; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .xml-cdata-starter,
+.Ymacs-Theme-dark.Ymacs-Theme-y .xml-cdata-stopper { color: #888; }
 
 /* Lisp mode */
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .lisp-keyword { color: #8f8; font-weight: bold; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .lisp-keyword { color: #8f8; font-weight: bold; }
 
 /* Markdown mode */
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .markdown-heading1 { color: #8df; font-weight: bold; font-size: 200%; font-family: "Lucida Grande","Trebuchet MS",Verdana,Tahoma,sans-serif; }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .markdown-heading2 { color: #8df; font-weight: bold; font-size: 170%; font-family: "Lucida Grande","Trebuchet MS",Verdana,Tahoma,sans-serif; }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .markdown-heading3 { color: #8df; font-weight: bold; font-size: 150%; font-family: "Lucida Grande","Trebuchet MS",Verdana,Tahoma,sans-serif; }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .markdown-heading4 { color: #8df; font-weight: bold; font-size: 130%; font-family: "Lucida Grande","Trebuchet MS",Verdana,Tahoma,sans-serif; }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .markdown-heading5 { color: #8df; font-weight: bold; font-size: 110%; font-family: "Lucida Grande","Trebuchet MS",Verdana,Tahoma,sans-serif; }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .markdown-heading6 { color: #8df; font-weight: bold; font-size: 100%; font-family: "Lucida Grande","Trebuchet MS",Verdana,Tahoma,sans-serif; }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .markdown-blockquote1 { color: #8f8; }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .markdown-blockquote2 { color: #88f; }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .markdown-blockquote3 { color: #f8f; }
-.Ymacs-Theme-dark.Ymacs-Theme-y .Ymacs_Frame .markdown-blockquote { color: #aaa; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .markdown-heading1 { color: #8df; font-weight: bold; font-size: 200%; font-family: "Lucida Grande","Trebuchet MS",Verdana,Tahoma,sans-serif; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .markdown-heading2 { color: #8df; font-weight: bold; font-size: 170%; font-family: "Lucida Grande","Trebuchet MS",Verdana,Tahoma,sans-serif; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .markdown-heading3 { color: #8df; font-weight: bold; font-size: 150%; font-family: "Lucida Grande","Trebuchet MS",Verdana,Tahoma,sans-serif; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .markdown-heading4 { color: #8df; font-weight: bold; font-size: 130%; font-family: "Lucida Grande","Trebuchet MS",Verdana,Tahoma,sans-serif; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .markdown-heading5 { color: #8df; font-weight: bold; font-size: 110%; font-family: "Lucida Grande","Trebuchet MS",Verdana,Tahoma,sans-serif; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .markdown-heading6 { color: #8df; font-weight: bold; font-size: 100%; font-family: "Lucida Grande","Trebuchet MS",Verdana,Tahoma,sans-serif; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .markdown-blockquote1 { color: #8f8; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .markdown-blockquote2 { color: #88f; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .markdown-blockquote3 { color: #f8f; }
+.Ymacs-Theme-dark.Ymacs-Theme-y .markdown-blockquote { color: #aaa; }
 
 /* other stuff */
 .Ymacs-Theme-dark {
@@ -92,7 +92,7 @@
   background-color: rgba(0, 0, 0, 0.2);
 }
 
-.Ymacs.Ymacs-Theme-dark.Ymacs-line-numbers .Ymacs-frame-content div.Ymacs-current-line:before {
+.Ymacs.Ymacs-Theme-dark.Ymacs-line-numbers .Ymacs_Frame-active .Ymacs-frame-content div.Ymacs-current-line:before {
   background-color: #000;
   color: #f51;
 }
