--- a/src/css/themes/emacs-sanityinc-tomorrow-night.scss
+++ b/src/css/themes/emacs-sanityinc-tomorrow-night.scss
@@ -24,11 +24,11 @@
 .Ymacs-Theme-sanityinc-tomorrow-night .regexp-stopper { color: #8abeb7; }
 .Ymacs-Theme-sanityinc-tomorrow-night .regexp-modifier { color: #8abeb7; }
 .Ymacs-Theme-sanityinc-tomorrow-night .keyword { color: #b5bd68; }
-.Ymacs-Theme-sanityinc-tomorrow-night .comment { color: #969896; }
-.Ymacs-Theme-sanityinc-tomorrow-night .mcomment { color: #969896; }
-.Ymacs-Theme-sanityinc-tomorrow-night .comment-starter { color: #969896; }
-.Ymacs-Theme-sanityinc-tomorrow-night .mcomment-starter { color: #969896; }
-.Ymacs-Theme-sanityinc-tomorrow-night .mcomment-stopper { color: #969896; }
+.Ymacs-Theme-sanityinc-tomorrow-night .comment { color: #969896; font-style: italic; }
+.Ymacs-Theme-sanityinc-tomorrow-night .mcomment { color: #969896; font-style: italic; }
+.Ymacs-Theme-sanityinc-tomorrow-night .comment-starter { color: #969896; font-style: italic; }
+.Ymacs-Theme-sanityinc-tomorrow-night .mcomment-starter { color: #969896; font-style: italic; }
+.Ymacs-Theme-sanityinc-tomorrow-night .mcomment-stopper { color: #969896; font-style: italic; }
 .Ymacs-Theme-sanityinc-tomorrow-night .number { color: #81a2be; }
 .Ymacs-Theme-sanityinc-tomorrow-night .operator { }
 .Ymacs-Theme-sanityinc-tomorrow-night .error { color: #cc6666; font-weight: bold; }
@@ -41,17 +41,17 @@
 .Ymacs-Theme-sanityinc-tomorrow-night .xml-open-bracket { }
 .Ymacs-Theme-sanityinc-tomorrow-night .xml-close-bracket { }
 .Ymacs-Theme-sanityinc-tomorrow-night .xml-closetag-slash { }
-.Ymacs-Theme-sanityinc-tomorrow-night .xml-cdata { color: #969896; }
-.Ymacs-Theme-sanityinc-tomorrow-night .xml-cdata-starter { color: #969896; }
-.Ymacs-Theme-sanityinc-tomorrow-night .xml-cdata-stopper { color: #969896; }
+.Ymacs-Theme-sanityinc-tomorrow-night .xml-cdata { color: #969896; font-style: italic; }
+.Ymacs-Theme-sanityinc-tomorrow-night .xml-cdata-starter { color: #969896; font-style: italic; }
+.Ymacs-Theme-sanityinc-tomorrow-night .xml-cdata-stopper { color: #969896; font-style: italic; }
 .Ymacs-Theme-sanityinc-tomorrow-night .lisp-keyword { color: #b294bb; }
 .Ymacs-Theme-sanityinc-tomorrow-night .markdown-heading1 { font-weight: bold; font-size: 1.383em; }
 .Ymacs-Theme-sanityinc-tomorrow-night .markdown-heading2 { font-weight: bold; font-size: 1.192em; }
 .Ymacs-Theme-sanityinc-tomorrow-night .markdown-heading3 { color: #de935f; font-weight: bold; }
 .Ymacs-Theme-sanityinc-tomorrow-night .markdown-heading4 { color: #b294bb; font-weight: bold; }
-.Ymacs-Theme-sanityinc-tomorrow-night .markdown-heading5 { font-weight: bold; }
+.Ymacs-Theme-sanityinc-tomorrow-night .markdown-heading5 { font-weight: bold; font-style: italic; }
 .Ymacs-Theme-sanityinc-tomorrow-night .markdown-heading6 { font-weight: bold; }
-.Ymacs-Theme-sanityinc-tomorrow-night .markdown-blockquote { color: #969896; }
-.Ymacs-Theme-sanityinc-tomorrow-night .markdown-blockquote1 { color: #969896; }
-.Ymacs-Theme-sanityinc-tomorrow-night .markdown-blockquote2 { color: #969896; }
-.Ymacs-Theme-sanityinc-tomorrow-night .markdown-blockquote3 { color: #969896; }
+.Ymacs-Theme-sanityinc-tomorrow-night .markdown-blockquote { color: #969896; font-style: italic; }
+.Ymacs-Theme-sanityinc-tomorrow-night .markdown-blockquote1 { color: #969896; font-style: italic; }
+.Ymacs-Theme-sanityinc-tomorrow-night .markdown-blockquote2 { color: #969896; font-style: italic; }
+.Ymacs-Theme-sanityinc-tomorrow-night .markdown-blockquote3 { color: #969896; font-style: italic; }
