--- a/src/css/themes/emacs-sanityinc-tomorrow-night.scss
+++ b/src/css/themes/emacs-sanityinc-tomorrow-night.scss
@@ -3,6 +3,10 @@
 .Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_SplitCont .bar { background-color: #969896; }
 .Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_SplitCont.horiz .bar { border-top: 1px solid #373b41; border-bottom: 1px solid #373b41; }
 .Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_SplitCont.vert .bar { border-left: 1px solid #373b41; border-right: 1px solid #373b41; }
+.Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_Frame-active .Ymacs-current-line { background-color: #282a2e63 }
+.Ymacs-Theme-sanityinc-tomorrow-night .Ymacs-frame-content div.line:before {  color: #969896; }
+.Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_Frame-active div.line.Ymacs-current-line:before {  color: #c5c8c6; font-weight: bold; }
+.Ymacs-Theme-sanityinc-tomorrow-night .Ymacs-frame-content:before {  color: #969896; background-color: #222427; }
 .Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_Overlay.selection div { background-color: #373b41; }
 .Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_Overlay.isearch div { color: #1d1f21; background-color: #f0c674; }
 .Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_Overlay.isearch-lazy div { color: #1d1f21; background-color: #8abeb7; }
