--- a/src/css/ymacs-common.scss
+++ b/src/css/ymacs-common.scss
@@ -50,18 +50,20 @@
 
 .Ymacs_Minibuffer .Ymacs_Modeline { display: none; }
 
-.Ymacs_Overlay {}
-.Ymacs_Overlay div {
-  position: absolute;
-  right: 0;
-  left: 0;
+.Ymacs_Overlay {
+  > div {
+    position: absolute;
+    right: 0;
+    left: 0;
+  }
+  &.isearch {
+    > div {
+      z-index: 10;
+    }
+  }
 }
-.Ymacs_Overlay .isearch {
-  z-index: 10;
-}
-.Ymacs_Overlay .isearch-lazy {}
 
-$lnwidth: 3em;
+$lnwidth: 3.1em;
 
 .Ymacs.Ymacs-line-numbers .Ymacs-frame-content:before {
   box-sizing: border-box;
@@ -72,22 +74,23 @@ $lnwidth: 3em;
   top: 0;
   bottom: 0;
   width: $lnwidth;
+  z-index: -1;
+  font-size: 80%;
 }
 .Ymacs.Ymacs-line-numbers .Ymacs-frame-content {
   counter-reset: ymacs-line 0;
-  padding-left: calc($lnwidth + 5px);
 }
 .Ymacs.Ymacs-line-numbers .Ymacs-frame-content div.line { counter-increment: ymacs-line; }
 .Ymacs.Ymacs-line-numbers .Ymacs-frame-content div.line:before {
   box-sizing: border-box;
-  color: #888;
-  display: block;
-  position: absolute;
-  left: 0;
-  width: calc($lnwidth - 1px);
-  padding-right: 5px;
+  display: inline-block;
+  width: $lnwidth;
+  margin-right: 7px;
+  padding-right: 7px;
   content: counter(ymacs-line, decimal);
   text-align: right;
+  position: relative;
+  font-size: 80%;
 }
 
 .Ymacs .Ymacs_Frame.Ymacs_Minibuffer .Ymacs-frame-content {
