--- a/src/css/ymacs.scss
+++ b/src/css/ymacs.scss
@@ -1,3 +1,3 @@
 @use "./ymacs-common.scss";
-@use "./ymacs-syntax-dark.scss";
-@use "./ymacs-syntax-light.scss";
+// @use "./ymacs-syntax-dark.scss";
+// @use "./ymacs-syntax-light.scss";
